--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	along with this program; if not, write to the Free Software
 	Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 	MA 02110-1301, USA.
--->
+-->u
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
@@ -26,7 +26,11 @@
 </head>
 
 <body>
-	Sup foo?
+	Construction ongoing.
+	
+	For Comments/Inquiries:  libertasio.git.io@gmail.com
+	
+	Thanks for visiting!
 </body>
 
 </html>
